# CRUD-RUST-DOCKER

./: Dockerfile  README.md
conf/: secrets.env
crud/: Cargo.toml  docker-compose.yml
crud/docker/: docker-compose.yml  init.sql
crud/src/: controller.rs  main.rs  user_service.rs
docker/: docker-compose.yml  init.sql
src/: main.rs  model.rs  user_service.rs
