[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async Functions
tokio = {version = "1.36.0", features = ["full"]}

# Web server
axum = "0.7.4"

# JSON Parsing
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

# DB
sqlx = {version = "0.7.3", features = ["postgres", "macros", "runtime-tokio-native-tls"]}

# dotenv
dotenv = "0.15.0"